# pkg/odin/api/oas_parameters_gen.go
@@ -1669,6 +1669,69 @@ func decodeGetVersionParams(args [0]string, argsEscaped bool, r *http.Request) (
 	return params, nil
 }
 
+// PackagesExistParams is parameters of PackagesExist operation.
+type PackagesExistParams struct {
+	// Authentication token.
+	XAuthToken OptString
+}
+
+func unpackPackagesExistParams(packed middleware.Parameters) (params PackagesExistParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "X-Auth-Token",
+			In:   "header",
+		}
+		if v, ok := packed[key]; ok {
+			params.XAuthToken = v.(OptString)
+		}
+	}
+	return params
+}
+
+func decodePackagesExistParams(args [0]string, argsEscaped bool, r *http.Request) (params PackagesExistParams, _ error) {
+	h := uri.NewHeaderDecoder(r.Header)
+	// Decode header: X-Auth-Token.
+	if err := func() error {
+		cfg := uri.HeaderParameterDecodingConfig{
+			Name:    "X-Auth-Token",
+			Explode: false,
+		}
+		if err := h.HasParam(cfg); err == nil {
+			if err := h.DecodeParam(cfg, func(d uri.Decoder) error {
+				var paramsDotXAuthTokenVal string
+				if err := func() error {
+					val, err := d.DecodeValue()
+					if err != nil {
+						return err
+					}
+
+					c, err := conv.ToString(val)
+					if err != nil {
+						return err
+					}
+
+					paramsDotXAuthTokenVal = c
+					return nil
+				}(); err != nil {
+					return err
+				}
+				params.XAuthToken.SetTo(paramsDotXAuthTokenVal)
+				return nil
+			}); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "X-Auth-Token",
+			In:   "header",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // SearchLanguagePackagesParams is parameters of SearchLanguagePackages operation.
 type SearchLanguagePackagesParams struct {
 	// Authentication token.
